# GDPO

./: .gitignore  README.md  main.py  pyproject.toml
SFT/: sft_train.py  sft_trainer.py
eval/: README.md  eval.py  generate.py  humaneval.py  mbpp.py  parse_and_get_acc.py  run_eval.sh  run_eval_code.sh  test_reward_functions.py
gdpo/: data_utils.py  gdpo_config.py  gdpo_train.py  gdpo_trainer.py  likelihood_estimators.py  reward_func.py
gdpo/slurm_scripts/: countdown_base.sbatch  train.yaml
gdpo/utils_code/: code_providers.py  rewards.py
gdpo/utils_code/competitive_programming/: morph_client.py
