[project]
name = "GDPO"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==1.25.0",
    "pandas",
    "torch==2.6.0",
    "torchvision",
    "torchaudio",
    "transformers==4.49.0",
    "accelerate==1.4.0",
    "bitsandbytes==0.45.3",
    "peft==0.15.1",
    "deepspeed==0.16.4",
    "datasets==3.3.2",
    "tiktoken==0.9.0",
    "wandb==0.15.3",
    "sentencepiece",
    "evaluate",
    "scipy",
    "tqdm",
    "regex",
    "scikit-learn",
    "latex2sympy2_extended",
    "math_verify",
    "async_lru",
    "python-dotenv",
    "e2b-code-interpreter",
    "trl @ git+https://github.com/huggingface/trl.git@0f88c179e30b3439467942a08c3190f624d5c423",
]
